[package]
name = "cpc-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative <coop@cpc.dev>"]
description = "Dashboard application for CPC platform"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# GraphQL support
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = "2.0"
base64 = "0.21"

# Caching support
sled = { workspace = true }
sha2 = "0.10"

# CPC modules
visualization_context = { path = "../../packages/visualization_context" }

# Web framework
yew = { workspace = true, features = ["csr"] }

# JSON handling
serde_json = { workspace = true }

# Testing
wasm-bindgen-test = "0.3"

[features]
default = []
test-yew = ["wasm-bindgen-test"]