[package]
name = "cpc-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["CPC Cooperative <coop@cpc.dev>"]
description = "Dashboard application for CPC platform"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["full"] }

# Execution pipeline dependencies
dashmap = "5.5"
wasm-timer = "0.2"
futures = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# GraphQL support
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = "2.0"
base64 = "0.21"

# Caching support
sled = { workspace = true }
sha2 = "0.10"

# CPC modules
visualization_context = { path = "../../shared_packages/visualization_context" }
shtairir = { path = "../../shared_packages/shtairir" }
shtairir_editor_core = { path = "../../shared_packages/shtairir_editor" }

# Web framework
yew = { workspace = true, features = ["csr"] }
yew-router = "0.17"

# JSON handling already included above

# Logging
wasm-logger = "0.2"

# Testing
wasm-bindgen-test = { version = "0.3", optional = true }

[dev-dependencies]
# Build
trunk = "0.17"

[features]
default = []
test-yew = ["wasm-bindgen-test"]