[package]
name = "daw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
rodio = "0.17"

# Unique identifiers
uuid = { version = "1.4", features = ["v4", "serde"] }

# GraphQL API
async-graphql = "6.0"

# P2P networking
p2panda-rs = { git = "https://github.com/p2panda/p2panda", features = ["test-utils"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
# Async trait support
async-trait = "0.1"
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

[lib]
name = "daw"
path = "src/lib.rs"
crate-type = ["rlib"]