[package]
name = "daw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
rodio = { workspace = true }

# Unique identifiers
uuid = { workspace = true, features = ["v4", "serde"] }

# Date and time handling
chrono = { workspace = true, features = ["serde"] }

# GraphQL API
async-graphql = { workspace = true }

# P2P networking
# p2panda = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
# Async trait support
async-trait = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[lib]
name = "daw"
path = "src/lib.rs"
crate-type = ["rlib"]