[package]
name = "cpc-document-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
collaboration_engine = { path = "../../shared_packages/collaboration_engine" }
collaborative_docs = { path = "../../shared_packages/collaborative_docs" }
realtime_signaling = { path = "../../shared_packages/realtime_signaling" }
operational_transformation = { path = "../../shared_packages/operational_transformation" }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
pdf = { workspace = true }
docx-rs = "0.4.18"
semver = "1.0"
rand = { workspace = true }

# p2p dependencies
# p2panda-core = { workspace = true, optional = true }
# p2panda-net = { workspace = true, optional = true }
# p2panda-store = { workspace = true, optional = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "macros"], optional = true }

# QUIC transport dependencies
quinn = { version = "0.10.0", optional = true }
rustls = { workspace = true }
rcgen = "0.11"

# STUN/TURN dependencies
stun_codec = { version = "0.4.0", optional = true }

# Cryptographic dependencies
blake3 = "1.5"
ciborium = "0.2"
double-ratchet = "0.1.0"

# Media processing
image = "0.24"

# Encoding
base64 = "0.21"

# Yew for UI components
yew = { workspace = true, optional = true }
web-sys = { workspace = true }
stylist = { workspace = true, features = ["yew_integration"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
lru = "0.12"

[features]
default = []
p2p = ["libp2p", "quinn", "stun_codec"]
web = ["yew"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }