[package]
name = "ethical_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# GraphQL
async-graphql = "5.0"

# gRPC
tonic = "0.8"
prost = "0.11"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "decimal"] }

# Shared packages
shared_packages = { path = "../../shared_packages" }
consent_manager = { path = "../../shared_packages/consent_manager" }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tokio-test = "0.4"