[package]
name = "ethical_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# GraphQL
async-graphql = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "decimal"] }

# Shared packages
consent_manager = { path = "../../shared_packages/consent_manager" }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tokio-test = "0.4"