[package]
name = "feedback_showcase"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
feedback_core = { path = "../../shared_packages/feedback_core" }
feedback_analysis = { path = "../../shared_packages/feedback_analysis" }
feedback_visualization = { path = "../../shared_packages/feedback_visualization" }
reviews = { path = "../../shared_packages/reviews" }
survey = { path = "../../shared_packages/survey" }
plotters = "0.3.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "js-sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
fake = "2.4"
rayon = "1.5"
yew = "0.21"
yew-components = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Url", "HtmlAnchorElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics", "ResizeObserver", "Clipboard"] }
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "js-sys"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "data_generator_usage"
path = "examples/data_generator_usage.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false