[package]
name = "feedback_showcase"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
feedback_core = { path = "../../shared_packages/feedback_core" }
feedback_analysis = { path = "../../shared_packages/feedback_analysis" }
feedback_visualization = { path = "../../shared_packages/feedback_visualization" }
reviews = { path = "../../shared_packages/reviews" }
survey = { path = "../../shared_packages/survey" }
plotters = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde", "js-sys"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
fake = "2.4"
rayon = "1.5"
yew = { workspace = true }
yew-components = "0.5"
gloo-timers = { workspace = true, features = ["futures"] }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Blob", "Url", "HtmlAnchorElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics", "ResizeObserver", "Clipboard"] }
js-sys = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde", "js-sys"] }
stylist = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "data_generator_usage"
path = "examples/data_generator_usage.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false