[package]
name = "finance-sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
js-sys = "0.3.69"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
rust_decimal = "1.35.0"
thiserror = "1.0.58"
async-trait = "0.1.77"
log = "0.4.21"
wasm-logger = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-events = "0.2.0"

# Android-specific dependencies for haptics
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# CPC Core dependencies
packages-core-consent_manager = { path = "../../packages/core/consent_manager" }

# CPC Domain dependencies
packages-domains-finance = { path = "../../packages/domains/finance" }
packages-domains-sheets = { path = "../../packages/domains/sheets" }