[package]
name = "finance-sheets"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
stylist = { workspace = true, features = ["yew_integration"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
wasm-logger = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
gloo-events = "0.2.0"

# Android-specific dependencies for haptics
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# CPC Core dependencies
consent_manager = { path = "../../shared_packages/consent_manager" }