[package]
name = "cpc-finance"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
cpc-core = { path = "../", features = ["finance"] }
cpc-net = { path = "../../cpc-net" }
cpc_wallet = { path = "../../packages/core/wallet" }
async-graphql = { workspace = true }
async-graphql-actix-web = "4.0"
actix-web = "4.0"
rust-decimal = "1.29"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
async-trait = { workspace = true }
tracing = { workspace = true }
base64 = "0.21"
regex = "1.0"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
db_pool = { path = "../../shared_packages/db_pool" }
db_abstraction = { path = "../../shared_packages/db_abstraction" }

# p2p dependencies
p2panda = { workspace = true, optional = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "macros"] }

# Visualization dependencies
bevy = { workspace = true, optional = true }
plotters = { workspace = true, optional = true }
yew = { workspace = true, optional = true }

[features]
default = []
ocr = ["cpc-core/ocr"]
p2p = ["p2panda"]
visualization = ["bevy", "plotters"]
web = ["yew"]