[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "0.13.1"  # Ensure AV1/Opus/WebM support
plotters = "0.3"
sqlx = { version = "0.7", features = ["postgres"] }
sled = "0.34"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
exif = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"