[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"  # Ensure AV1/Opus/WebM support
plotters = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
sled = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v7", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"