[package]
name = "cpc-health"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
cpc-core = { path = "../", features = ["health"] }
cpc-net = { path = "../../cpc-net" }
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
actix-web = "4.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# p2p dependencies
p2panda = { version = "0.1", optional = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "macros"] }

# Visualization dependencies
bevy = { version = "0.13", optional = true }
yew = { version = "0.21", optional = true }
web-sys = { version = "0.3", optional = true }

[features]
default = []
p2p = ["p2panda"]
visualization = ["bevy"]
web = ["yew", "web-sys"]

[dependencies]
aes = "0.8"
rand = "0.8"
base64 = "0.21"