[package]
name = "cpc_health"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
async-graphql = { workspace = true }
async-graphql-actix-web = "4.0"
actix-web = "4.0"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
async-trait = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# p2p dependencies
p2panda = { workspace = true, optional = true }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "ping", "macros"] }

# Visualization dependencies
bevy = { workspace = true, optional = true }
yew = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

# Additional dependencies
aes = "0.8"
rand = { workspace = true }
base64 = "0.21"

[features]
default = []
p2p = ["p2panda"]
visualization = ["bevy"]
web = ["yew", "web-sys"]